# VUT-IFJ

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
doc/: Precedence_table.xlsx  ll.ods  ll.odt  precedence.out
src/: Makefile  error.h  generator.c  generator.h  hello_world.c  htab.c  htab.h  out  parser.c  parser.h  rozdeleni  scanner.c  scanner.h  stack.c  stack.h  stackTests.c  symtable.c  symtable.h
tests/: hello_test.c  lex_all.c  lex_all.h  lextest_arithmetic_operations.c  lextest_cycles.c  lextest_empty.c  lextest_error.c  lextest_functions.c  lextest_if_statements.c  lextest_only_prologue.c  lextest_prologue_extreme.c  lextest_relation_operators.c  lextest_variables_operations.c  stack_test.c
